src/objects/joinapi__Step__c.object
<CustomObject>
    <description>The configuration of what is presented to the customer during the join process.</description>
    <fields>
        <fullName>joinapi__Disable_Item_Navigation_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the item links on the marketing page.</description>
        <inlineHelpText>Disables the item links on the marketing page.</inlineHelpText>
        <label>Disable Item Navigation URL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Dynamic_Item_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be dynamic item selection.</description>
        <inlineHelpText>Defines the step to be dynamic item selection.</inlineHelpText>
        <label>Dynamic Item Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Enable_Account_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checking this field will allow the end user to search for organizations (Accounts) to relate their contact.</description>
        <inlineHelpText>Checking this field will allow the end user to search for organizations (Accounts) to relate their contact.</inlineHelpText>
        <label>SYSTEM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Populated when using a qualifying question step.</description>
        <inlineHelpText>Populated when using a qualifying question step.</inlineHelpText>
        <label>Form</label>
        <referenceTo>PagesApi__Form__c</referenceTo>
        <relationshipName>Join_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Instructions__c</fullName>
        <description>The value in this field will be presented under the title at the top of the page.</description>
        <inlineHelpText>The value in this field will be presented under the title at the top of the page.</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Authentication_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a authentication step.</description>
        <inlineHelpText>Defines the step to be a authentication step.</inlineHelpText>
        <label>Is Authentication Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Confirmation_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a confirmation step.</description>
        <inlineHelpText>Defines the step to be a confirmation step.</inlineHelpText>
        <label>Is Confirmation Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Custom_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a custom page.</description>
        <inlineHelpText>Defines the step to be a custom page.</inlineHelpText>
        <label>Is Custom Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Final_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked indicates this is the final step in the Join Process</description>
        <inlineHelpText>When checked indicates this is the final step in the Join Process</inlineHelpText>
        <label>Is Final Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_First_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked indicates this is the first step in the Join Process</description>
        <inlineHelpText>When checked indicates this is the first step in the Join Process</inlineHelpText>
        <label>Is First Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Marketing_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a marketing step.</description>
        <inlineHelpText>Defines the step to be a marketing step.</inlineHelpText>
        <label>Is Marketing Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Payment_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a payment step.</description>
        <inlineHelpText>Defines the step to be a payment step.</inlineHelpText>
        <label>Is Payment Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Product_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a item flow step.</description>
        <inlineHelpText>Defines the step to be a item flow step.</inlineHelpText>
        <label>Is Product Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Published__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked this step is visible to end users.</description>
        <inlineHelpText>When checked this step is visible to end users.</inlineHelpText>
        <label>Is Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Is_Qualifying_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a qualifying question step.</description>
        <inlineHelpText>Defines the step to be a qualifying question step.</inlineHelpText>
        <label>Is Qualifying Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Join_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Relates the join process step to the join process.</description>
        <inlineHelpText>Relates the join process step to the join process.</inlineHelpText>
        <label>Join Process</label>
        <referenceTo>joinapi__Join_Process__c</referenceTo>
        <relationshipName>Join_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Login_Button_Label__c</fullName>
        <defaultValue>&apos;Login&apos;</defaultValue>
        <description>Defines the button label for the login section of the authentication page.</description>
        <inlineHelpText>Defines the button label for the login section of the authentication page.</inlineHelpText>
        <label>Login Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Login_Header__c</fullName>
        <defaultValue>&apos;Login&apos;</defaultValue>
        <description>Appears as the header for the login section of the authentication page.</description>
        <inlineHelpText>Appears as the header for the login section of the authentication page.</inlineHelpText>
        <label>Login Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Login_Instructions__c</fullName>
        <description>Instructions to be presented to the end user for finding their contact record.</description>
        <inlineHelpText>Instructions to be presented to the end user for finding their contact record.</inlineHelpText>
        <label>Login Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>joinapi__Navigation_URL__c</fullName>
        <description>Defines the navigation url as a result of clicking the action button.</description>
        <inlineHelpText>Defines the navigation url as a result of clicking the action button.</inlineHelpText>
        <label>Navigation URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>joinapi__New_User_Button_Label__c</fullName>
        <defaultValue>&apos;Create Login&apos;</defaultValue>
        <description>Defines the button label for the new user section of the authentication page.</description>
        <inlineHelpText>Defines the button label for the new user section of the authentication page.</inlineHelpText>
        <label>New User Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__New_User_Header__c</fullName>
        <defaultValue>&apos;Create Account&apos;</defaultValue>
        <description>Appears as the header for the new user section of the authentication page.</description>
        <inlineHelpText>Appears as the header for the new user section of the authentication page.</inlineHelpText>
        <label>New User Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__New_User_Instructions__c</fullName>
        <description>Instructions to be presented to the end user for creating a new user.</description>
        <inlineHelpText>Instructions to be presented to the end user for creating a new user.</inlineHelpText>
        <label>New User Instructions</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>joinapi__Next_Step_Button_Label__c</fullName>
        <defaultValue>&apos;Next Step&apos;</defaultValue>
        <description>Defines the button label for the next step on every step.</description>
        <inlineHelpText>Defines the button label for the next step on every step.</inlineHelpText>
        <label>Next Step Button Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Next_Step__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the step that is redirected after the current step is submitted</description>
        <inlineHelpText>This is the step that is redirected after the current step is submitted</inlineHelpText>
        <label>Next Step</label>
        <referenceTo>joinapi__Step__c</referenceTo>
        <relationshipLabel>Steps</relationshipLabel>
        <relationshipName>Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Order__c</fullName>
        <description>Defines the order the steps are to be displayed.</description>
        <inlineHelpText>Defines the order the steps are to be displayed.</inlineHelpText>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>joinapi__Page_Title__c</fullName>
        <description>Defines the page title text that is displayed at the top of the page.</description>
        <inlineHelpText>Defines the page title text that is displayed at the top of the page.</inlineHelpText>
        <label>Page Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>joinapi__Product_Step_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for product flow steps, this field defines the item for the item flow.</description>
        <inlineHelpText>Used for product flow steps, this field defines the item for the item flow.</inlineHelpText>
        <label>Product Step Item</label>
        <referenceTo>OrderApi__Item__c</referenceTo>
        <relationshipName>Join_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Specific_Item_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines the step to be a specific item selection.</description>
        <inlineHelpText>Defines the step to be a specific item selection.</inlineHelpText>
        <label>Specific Item Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>joinapi__Store__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the store that controls the authentication and payment rules used for this page.</description>
        <inlineHelpText>Defines the store that controls the authentication and payment rules used for this page.</inlineHelpText>
        <label>Store</label>
        <referenceTo>OrderApi__Store__c</referenceTo>
        <relationshipName>Join_Process_Steps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>joinapi__Visual_Force_Page_API_Name__c</fullName>
        <description>Define the VF page to be used for this step.</description>
        <inlineHelpText>Define the VF page to be used for this step.</inlineHelpText>
        <label>Visual Force Page API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Step</label>
    <listViews>
        <fullName>joinapi__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Step Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>